Add Version 6 (index.html, app.js, worker.mjs, items.csv, sounds, images)

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CHEM 112 Weekly Flashcards 📚</title>
-  <link rel="preload" href="sounds/correct.mp3" as="audio">
-  <link rel="preload" href="sounds/incorrect.mp3" as="audio">
+  <link rel="preload" href="sounds/correct.mp3" as="audio" type="audio/mpeg">
+  <link rel="preload" href="sounds/incorrect.mp3" as="audio" type="audio/mpeg">
   <style>
     :root{
       --bg:#0b0d10; --fg:#eef2f8; --muted:#9cabba;
