--- a/index.html
+++ b/index.html
@@ -45,6 +45,33 @@
     .btn-row{display:flex;gap:8px;flex-wrap:wrap}
     .predict button{flex:1;min-width:46px}
   
+/* --- Topbar --- */
+    .topbar{
+      position:sticky; top:0; z-index:10;
+      display:flex; gap:8px; justify-content:flex-end;
+      padding:8px 16px; background:rgba(11,13,16,.6); backdrop-filter: blur(6px);
+    }
+    .topbar button{ width:auto; padding:10px 14px; }
+
+    /* --- Mobile sizing helpers --- */
+    .mobile .container{ padding:12px; }
+    .mobile .imgwrap{ height:38vh; }          /* fit image + input on small screens */
+    .kbd-open .imgwrap{ height:24vh; }        /* when virtual keyboard is open */
+    .mobile input, .mobile select, .mobile button{ font-size:16px; } /* iOS zoom fix */
+
+    /* --- Button shake on incorrect --- */
+    @keyframes btn-shake {
+      0%,100%{ transform:translateX(0); }
+      15%{ transform:translateX(-6px); }
+      30%{ transform:translateX(6px); }
+      45%{ transform:translateX(-5px); }
+      60%{ transform:translateX(5px); }
+      75%{ transform:translateX(-3px); }
+      90%{ transform:translateX(3px); }
+    }
+    .shake { animation: btn-shake 400ms ease-in-out; }
+
+
     /* Button bounce animation */
     @keyframes btn-pop { 0%{transform:scale(1)} 40%{transform:scale(0.96)} 100%{transform:scale(1)} }
     .pop { animation: btn-pop 400ms ease-out; }
@@ -54,6 +81,27 @@
   </style>
 </head>
 <body>
+  
+  <div class="topbar">
+    <button id="homeBtn" title="Back to Start">Home</button>
+    <button id="instrBtn" title="Instructions">Instructions</button>
+  </div>
+
+  <!-- Instructions -->
+  <div id="instructions" class="view card hidden">
+    <h2>Instructions</h2>
+    <p class="muted">Read the study instructions below. Use the Back button when you’re ready.</p>
+    <div style="margin:10px 0;">
+      <!-- Drop your PDF at /instructions.pdf or change the src -->
+      <iframe id="instrFrame" src="instructions.pdf" title="Instructions PDF"
+              style="width:100%;height:70vh;border:1px solid var(--border);border-radius:12px;background:#fff;"></iframe>
+    </div>
+    <div class="actions">
+      <button id="backFromInstr">Back</button>
+    </div>
+  </div>
+
+  
   <div class="container">
     <h1>CHEM 112 Weekly Flashcards 📚</h1>
     <p class="muted">Answer the questions for your current week. You’ll see feedback after each response and re-attempt missed items until mastery.</p>
