--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     .btn-row{display:flex;gap:8px;flex-wrap:wrap}
     .predict button{flex:1;min-width:46px}
   
-/* --- Topbar --- */
+    /* --- Topbar --- */
     .topbar{
       position:sticky; top:0; z-index:10;
       display:flex; gap:8px; justify-content:flex-end;
@@ -53,11 +53,34 @@
     }
     .topbar button{ width:auto; padding:10px 14px; }
 
+    /* Keep layout centered and scrollable on mobile/keyboard */
+    html, body { height: 100%; }
+    body { -webkit-text-size-adjust: 100%; touch-action: manipulation; }
+
+    .container {
+      max-width: 820px; margin: 0 auto; padding: 16px;
+      min-height: 100dvh;              /* modern viewport unit */
+    }
+    @supports (height: 100svh) {
+      .container { min-height: 100svh; } /* even better on iOS 16+ */
+    }
+
+    /* When the keyboard is open, just shrink the image area a bit */
+    .kbd-open .imgwrap { height: 28vh; }   /* was 24vh; gives a bit more room */
+
+    /* Optional: avoid pinch zoom “drifting” your centering */
+    .container { display: block; }
+
     /* --- Mobile sizing helpers --- */
     .mobile .container{ padding:12px; }
     .mobile .imgwrap{ height:38vh; }          /* fit image + input on small screens */
     .kbd-open .imgwrap{ height:24vh; }        /* when virtual keyboard is open */
     .mobile input, .mobile select, .mobile button{ font-size:16px; } /* iOS zoom fix */
+
+    
+    /* Button bounce animation */
+    @keyframes btn-pop { 0%{transform:scale(1)} 40%{transform:scale(0.96)} 100%{transform:scale(1)} }
+    .pop { animation: btn-pop 400ms ease-out; }
 
     /* --- Button shake on incorrect --- */
     @keyframes btn-shake {
@@ -71,10 +94,6 @@
     }
     .shake { animation: btn-shake 400ms ease-in-out; }
 
-
-    /* Button bounce animation */
-    @keyframes btn-pop { 0%{transform:scale(1)} 40%{transform:scale(0.96)} 100%{transform:scale(1)} }
-    .pop { animation: btn-pop 400ms ease-out; }
 
     /* Optional full-screen confetti canvas */
     #confettiFull { position:fixed; inset:0; pointer-events:none; z-index:9999; }
@@ -101,7 +120,7 @@
     </div>
   </div>
 
-  
+
   <div class="container">
     <h1>CHEM 112 Weekly Flashcards 📚</h1>
     <p class="muted">Answer the questions for your current week. You’ll see feedback after each response and re-attempt missed items until mastery.</p>
