--- a/index.html
+++ b/index.html
@@ -73,7 +73,29 @@
     .mobile .imgwrap{ height:38vh; }          /* fit image + input on small screens */
     .mobile input, .mobile select, .mobile button{ font-size:16px; } /* iOS zoom fix */
 
-    
+
+    /* Collapsible instructions */
+    .collapse {
+      overflow: hidden;
+      max-height: 0;
+      transition: max-height 260ms ease;
+      margin-top: 10px;
+    }
+    .collapse.open {
+      max-height: 70vh; /* a bit more than iframe height for borders/margins */
+    }
+    .instr-check > button { width:auto; }
+
+
+    /* Bigger, centered question prompt */
+    #answerLabel {
+      font-size: 1.22rem;     /* bigger, but smaller than 1.4rem fillPrompt */
+      font-weight: 600;
+      text-align: center;
+      display: block;         /* ensures centering behaves consistently */
+    }
+
+
     /* Button bounce animation */
     @keyframes btn-pop { 0%{transform:scale(1)} 40%{transform:scale(0.96)} 100%{transform:scale(1)} }
     .pop { animation: btn-pop 400ms ease-out; }
@@ -157,6 +179,25 @@
         <div id="predictBtns" class="btn-row"></div>
         <p id="predictWarn" class="warn" style="display:none;"></p>
       </div>
+
+      <div class="instr-check" style="margin-top:14px;">
+        <p class="muted" style="margin:0 0 6px;">
+          Have you read the instructions yet? (optional)
+        </p>
+        <button id="toggleInlineInstr" type="button" aria-expanded="false" aria-controls="inlineInstr">
+          Show instructions
+        </button>
+
+      <!-- Collapsible panel -->
+      <div id="inlineInstr" class="collapse" hidden>
+        <iframe
+          src="instructions.pdf"
+          title="Instructions PDF"
+          style="width:100%;height:60vh;border:1px solid var(--border);border-radius:12px;background:#fff;"
+        ></iframe>
+      </div>
+    </div>
+
 
       <div class="actions" style="margin-top:10px;">
         <button id="beginWeekBtn" disabled>Continue</button>
